; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cthw20k1.c_src_param_pitch_mixer.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_cthw20k1.c_src_param_pitch_mixer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AR_PTS_PITCH = common dso_local global i32 0, align 4
@AR_SLOT_SIZE = common dso_local global i32 0, align 4
@AR_PARAM_SRC_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @src_param_pitch_mixer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @src_param_pitch_mixer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = shl i32 %3, 4
  %5 = load i32, i32* @AR_PTS_PITCH, align 4
  %6 = add i32 %4, %5
  %7 = load i32, i32* @AR_SLOT_SIZE, align 4
  %8 = add i32 %6, %7
  %9 = load i32, i32* @AR_PARAM_SRC_OFFSET, align 4
  %10 = sub i32 %8, %9
  %11 = load i32, i32* @AR_SLOT_SIZE, align 4
  %12 = urem i32 %10, %11
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
